<resources>
    <string name="app_name">IBank</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="cancel_txt">Cancel</string>
    <string name="cvv">CVV</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="pan_id">PAN ID</string>
    <string name="level_1">Level 1</string>
    <string name="transaction_history">Transaction History</string>
    <string name="history">History</string>
    <string name="email">E-mail</string>
    <string name="level_1_description">Level 1 Description</string>
    <string name="completion">Completed</string>
    <string name="level_2">Level 2</string>
    <string name="level_2_description">Level 2 Description</string>
    <string name="level_3">Level 3</string>
    <string name="level_3_description">Level 3 Description</string>
    <string name="code">Code</string>
    <string name="linked_bank_account">Linked bank accounts</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="add_card">Add Card</string>
    <string name="id_type">ID Type</string>
    <string name="vpaname">VPA</string>
    <string name="browse">Browse</string>
    <string name="submit">Submit</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add">ADD</string>
    <string name="home">Home</string>
    <string name="payments">Payments</string>
    <string name="finance">Finance</string>
    <string name="profile">Profile</string>
    <string name="mifos_pay">Mifos Pay</string>
    <string name="login">Login</string>
    <string name="enter_name_or_vpa">Enter name or vpa</string>
    <string name="balance_hint">Total balance</string>
    <string name="show_more">Show more</string>
    <string name="invoices">Invoices</string>
    <string name="request">Request</string>
    <string name="deposit">Deposit</string>
    <string name="back">Back</string>
    <string name="bank_account">Bank Account</string>
    <string name="qr_code">QR code</string>
    <string name="complete_kyc">Complete the KYC process</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="qr_code_details">QR code details</string>
    <string name="user_details">User details</string>
    <string name="send_money">Send money</string>
    <string name="sending_to">Sending to</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="add_account">ADD ACCOUNT</string>
    <string name="vpa_mobile_number">VPA/ Mobile Number</string>
    <string name="proceed">Proceed</string>
    <string name="scan_code">Scan Code</string>
    <string name="receive">Receive</string>
    <string name="virtual_payment_address_vpa">Virtual Payment Address (VPA)</string>
    <string name="show_code">Show code</string>
    <string name="unique_receipt_link">Unique Receipt Link</string>
    <string name="invoice_details">Invoice details</string>
    <string name="payment_options_will_be_fetched_from_upi">Payment Options (will be fetched from
        UPI)
    </string>
    <string name="unique_payment_link">Unique Payment Link</string>
    <string name="view_receipt">View Receipt</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="enter_mobile_number_description">It should be currently activated on your device
        and linked with your bank account as well.
    </string>
    <string name="complete_your_registration">Complete your registration</string>
    <string name="virtual_payment_address">Virtual Payment Address</string>
    <string name="send_via">Send via</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="confirm_mobile_number_message">To confirm your mobile number \n we need to send an
        SMS from \n your phone*
    </string>
    <string name="choose_your_sim">Please choose your SIM</string>
    <string name="regular_charges_will_apply">*Regular charges will apply</string>
    <string name="send_sms">Send SMS</string>
    <string name="or">or</string>
    <string name="bank_account_mobile_verification_conditions">Make sure that the following
        conditions are met: \n1. Mobile Number is linked with your Bank Account. \n2. Mobile Number
        is
        registered on MifosPay. \n3. It\'s sim is on this device.
    </string>
    <string name="okay">Okay</string>
    <string name="trusted_merchants">Trusted Merchants</string>
    <string name="field_required">Field Required</string>
    <string name="card_expiry_message">Your card has expired</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_as_merchant">Sign up as merchant</string>
    <string name="sign_up_as_customer">Sign up as customer</string>
    <string-array name="months_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="label_select_picture">Select picture</string>
    <string name="question1">How can I add an Account?</string>
    <string name="question2">How can I access my Payment History?</string>
    <string name="question3">How to make a Transfer?</string>
    <string name="question4">How can I add a Card?</string>
    <string name="answer1">To add an account, navigate to finance section and click on the add account button. Then select your bank and verify your mobile number to get going. </string>
    <string name="answer2">Navigate to Payments section. You will find your payment history under the History tab.</string>
    <string name="answer3">To make a transfer, navigate to Payments section.Under the Send tab, from there you can choose the type of transfer, add the amount and submit.</string>
    <string name="answer4">Navigate to Finance section. Click on Add Card under the Cards tab.</string>
    <string name="setup_upi">Setup UPI</string>
    <string name="change_upi_pin">Change UPI PIN</string>
    <string name="forgot_upi_pin">Forgot UPI PIN</string>
    <string name="delete_bank">Delete Bank</string>
    <string name="link_your_bank_account">Link Your Bank Account</string>
    <string name="no_linked_bank_accounts">No Linked Bank Accounts</string>
    <string name="editable_image_hint">Editable image hint</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="current_passcode">Current Passcode</string>
    <string name="new_passcode">New Passcode</string>
    <string name="confirm_new_passcode">Confirm New Passcode</string>
    <string name="change_email">Change Email</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="items_bought">items bought</string>
    <string name="status">status</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="date">date</string>
    <string name="link">link</string>
    <string name="no_invoices_found">No invoices found</string>
    <string name="popular_banks">Popular Banks</string>
    <string name="other_banks">Other Banks</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="verifying_otp_please_wait">Verifying OTP. Please wait..</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="disable_account">Disable account</string>
    <string name="log_out">Log out</string>
    <string name="debit_card_details">Debit Card Details</string>
    <string name="debit_card_error_message">Invalid Debit Card Number</string>
    <string name="one_time_password">One Time Password</string>
    <string name="upi_pin_setup">UPI PIN Setup</string>
    <string name="all_fields_are_mandatory">All fields are mandatory.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_of_business">Name of Business</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="client_name">client name</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="no_transactions_found">No transactions found</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="remove_profile_picture">Remove Profile Picture</string>
    <string name="sign_up_as">Sign up as</string>
    <string name="merchant">Merchant</string>
    <string name="customer">Customer</string>
    <string name="ease_my_sign_up_using_google_account">Ease my sign up using Google Account</string>
    <string name="next">Next</string>
    <string name="account">account</string>
    <string name="subitem">SubItem</string>
    <string name="no_saved_cards_found">No saved cards found</string>
    <string name="debit_card_number">Debit Card Number</string>
    <string name="mm">MM</string>
    <string name="slash">/</string>
    <string name="search">Search</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="vpa">VPA</string>
    <string name="enter_upi_pin">Enter UPI PIN</string>
    <string name="notifications">Notifications</string>
    <string name="bank_name">Bank Name</string>
    <string name="ac_holder_name">A/C Holder Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="ifsc">IFSC</string>
    <string name="type">Type</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="faq">FAQ</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth_with_formate">Date of Birth (DD/MM/YYYY)</string>
    <string name="user">User </string>
    <string name="details">Details</string>
    <string name="text_upload_file">Tap to upload your file</string>
    <string name="text_upload_document">Upload any 2 of the following Documents</string>
    <string name="sub_text_upload_document">Tax Documents | Drivers Lcense | Visa Documents</string>
    <string name="click_here">Click Here</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="dont_have_social_security_number">Dont have a Social Security Number?</string>
    <string name="card_info_title">What is Reloadable card?</string>
    <string name="card_info_sub_title1">Reloadable debit cards allow you to add money to them as needed. A reloadable card works like a debit card, except that you preload funds onto the card with cash rather than use the card to access money held in a checking account.</string>
    <string name="card_info_sub_title2">A reloadable debit card, on the other hand, is not linked to a bank account. So, unlike a bank debit card, which normally allows you to spend as much money as you have in the account, a reloadable card limits you to the money you have loaded onto it..</string>
    <string name="address_title">Please update your address to transact.</string>
    <string name="update">Update</string>
</resources>