<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back_arrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="@dimen/value_40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/value_40dp"
        android:src="@drawable/small_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:text="@string/user"
        app:layout_constraintBottom_toTopOf="@id/tv_details"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_details"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="100dp"
        android:text="@string/details"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/user_info_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/user_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_login">

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/value_16dp"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/value_16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp_code"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoFormatNumber="false" />

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="@integer/telephone_numbers_max_length_standard" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/value_16dp"
            android:layout_weight="1"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/date_of_birth_with_formate" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/value_16dp"
            android:layout_weight="1"
            android:hint="@string/email" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/AppTheme.Button.LightBlue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="35dp"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>