<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_16dp"
        android:background="@color/colorBanner"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/address_title"/>

        <Button
            android:id="@+id/btn_address_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_banner"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/update"/>

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/levelcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/banner">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_40dp"
            android:text="@string/complete_kyc"
            android:textAlignment="center"
            android:textSize="@dimen/value_15sp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/lv1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_70dp"
            android:layout_marginTop="130dp">

            <Button
                android:id="@+id/blv1"
                style="@style/Widget.MaterialComponents.Button"
                android:background="@color/colorAccent"
                android:layout_width="@dimen/value_100dp"
                android:layout_height="@dimen/value_50dp"
                android:layout_marginLeft="@dimen/value_20dp"
                android:layout_marginRight="@dimen/value_50dp"
                android:text="@string/level_1" />

            <ImageView
                android:id="@+id/tickimg1"
                android:layout_width="@dimen/value_20sp"
                android:layout_height="@dimen/value_20sp"
                android:layout_marginTop="@dimen/value_13sp"
                />

            <TextView
                android:id="@+id/completedtx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/value_20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_70dp"
            android:layout_marginTop="210dp">

            <Button
                android:id="@+id/blv2"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/value_100dp"
                android:layout_height="@dimen/value_50dp"
                android:layout_marginLeft="@dimen/value_20dp"
                android:layout_marginRight="@dimen/value_50dp"
                android:text="@string/level_2" />

            <ImageView
                android:id="@+id/tickimg2"
                android:layout_width="@dimen/value_20sp"
                android:layout_height="@dimen/value_20sp"
                android:layout_marginTop="@dimen/value_13sp" />

            <TextView
                android:id="@+id/completedtx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/value_20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_70dp"
            android:layout_marginTop="290dp">

            <Button
                android:id="@+id/blv3"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/value_100dp"
                android:layout_height="@dimen/value_50dp"
                android:layout_marginLeft="@dimen/value_20dp"
                android:layout_marginRight="@dimen/value_50dp"
                android:text="@string/level_3" />

            <ImageView
                android:id="@+id/tickimg3"
                android:layout_width="@dimen/value_20sp"
                android:layout_height="@dimen/value_20sp"
                android:layout_marginTop="@dimen/value_13sp" />

            <TextView
                android:id="@+id/completedtx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/value_20dp" />

        </LinearLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>